--- a/src/pages/homePage/home.css
+++ b/src/pages/homePage/home.css
@@ -37,11 +37,13 @@
     position: fixed;
     top: 10rem;
     right: 12rem;
-    z-index: 10;
+    z-index: 1;
     justify-content: center;
     align-items: center;
     display: flex;
 }
+
+
 /* service Containers */
 
 
@@ -127,11 +129,11 @@
     position: relative;
 }
 
-.container-faq {
+/* .container-faq {
     padding-top: 4rem;
     padding-right: 0rem;
 
-}
+} */
 
 .container-item-full {
     display: flex;
@@ -238,7 +240,7 @@
       width: 100%;
       position: sticky;
       top: 0; /* Adjust this value based on your desired spacing from the top */
-      z-index: 10; /* Adjust the z-index as needed */
+      z-index: 0; /* Adjust the z-index as needed */
       background-color: #fff; /* Background color for the sticky area */
       padding: 1rem 0.5rem; /* Add padding to create space around the content */
       
@@ -251,6 +253,22 @@
         align-items: center;
         padding: 2rem 2rem;
     }
+    .section-container-1 {
+        position: relative;
+        display: flex;
+        flex-direction: column; 
+        justify-content: center;
+        align-items: center;
+        padding: 2rem 2rem;
+    }
+    @media (max-width: 1000px) {
+        .section-container-1 {
+            padding: 0;
+        }
+        
+    }
+
+
     .landing-img {
         width: 100%;
     }
